--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/sliderimg1.png" class="d-block w-100" alt="...">
+        <img src="/DebCoder/sliderimg1.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Welcome to DebCoder</h2>
           <p>Technology news,Development and Trends</p>
@@ -154,7 +154,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/sliderimg2.png" class="d-block w-100" alt="...">
+        <img src="/DebCoder/sliderimg2.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>The Best Coding Blog</h2>
           <p>Technology news,Development and Trends</p>
@@ -164,7 +164,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/sliderimg3.png" class="d-block w-100" alt="...">
+        <img src="/DebCoder/sliderimg3.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h2>Read and Contribute</h2>
           <p>Technology news,Development and Trends</p>
@@ -197,7 +197,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/cardimg1.png" class="d-block w-100" alt="...">
+            <img src="/DebCoder/cardimg1.png" class="d-block w-100" alt="...">
 
           </div>
         </div>
@@ -213,7 +213,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/cardimg2.png" class="d-block w-100" alt="...">
+            <img src="/DebCoder/cardimg2.png" class="d-block w-100" alt="...">
 
           </div>
         </div>
@@ -234,7 +234,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/cardimg3.png" class="d-block w-100" alt="...">
+            <img src="/DebCoder/cardimg3.png" class="d-block w-100" alt="...">
 
           </div>
         </div>
@@ -250,7 +250,7 @@
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/cardimg4.png" class="d-block w-100" alt="...">
+            <img src="/DebCoder/cardimg4.png" class="d-block w-100" alt="...">
 
           </div>
         </div>
